--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "chart.js": "^4.4.3",
-    "moment": "2.29.1",
-    "@cubejs-client/core": "0.27.15",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "parcel-bundler": "^1.6.1",
     "react": "^17.0.2",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
-    "flatpickr": "4.6.9",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
