--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "csv-writer": "^1.6.0",
+    "fs": "^0.0.1-security",
     "parcel-bundler": "^1.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
